[gd_scene load_steps=8 format=3 uid="uid://cp616ryfjwdwj"]

[ext_resource type="Script" path="res://autoloads/hit-effect/vfx_manager.gd" id="1_gvhkw"]
[ext_resource type="Shader" path="res://camera/chromatic_abberatiob.gdshader" id="2_o0rfe"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_08do4"]
shader = ExtResource("2_o0rfe")
shader_parameter/chroma_strength = 0.0
shader_parameter/r_displacement = Vector2(3, 0)
shader_parameter/g_displacement = Vector2(0, 0)
shader_parameter/b_displacement = Vector2(-3, 0)

[sub_resource type="Animation" id="Animation_opiid"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ChromaticAbberation:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/ChromaticAbberation:material:shader_parameter/chroma_strength")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_wni4m"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ChromaticAbberation:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.19),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("CanvasLayer/ChromaticAbberation:material:shader_parameter/chroma_strength")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_wqgu1"]
resource_name = "player_dead"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c30wq"]
_data = {
"RESET": SubResource("Animation_opiid"),
"hit": SubResource("Animation_wni4m"),
"player_dead": SubResource("Animation_wqgu1")
}

[node name="VFXManager" type="Node2D"]
script = ExtResource("1_gvhkw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ChromaticAbberation" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_08do4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c30wq")
}

[node name="HitStopTimer" type="Timer" parent="."]
one_shot = true

[node name="HitLabels" type="Node2D" parent="."]
